--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://zhangyu118.bcc-szth.baidu.com:8306/shop
+spring.datasource.url=jdbc:mysql://host:8306/shop
 spring.datasource.username=root
 spring.datasource.password=ZY123!@#
+
+spring.jpa.show-sql=true
